# Meetkat

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/adr/: ADR-001-hybrid-mas-governance.md  ADR-002-internal-room-protocol-topology.md  ADR-003-collaboration-mechanism.md
docs/decisions/: 2026-05-28-AI编程助手引入策略.md  2026-05-28-微服务边界拆分决策.md  2026-05-31-Feasibility-and-scope-of-the-proposed-system改造.md  INDEX.md  README.md
docs/experience/: EXPERIENCE_INDEX.json
docs/plans/: PLAN_INDEX.json
docs/prd/: Decision-Room-PRD-v0.4.md
docs/session-handoff/: SHO-20260405-0001.md  SHO-20260407-0001.md
docs/tech/: MAS-harness-architecture-baseline.md  (+6 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.contract-tests.json  tsconfig.json
scripts/: demo_hybrid_decision.py  generate_decisions_index.py  regen_avatars_svg.py  run_meeting_and_export.py  run_real_small_flow.py  run_room_runtime.py  smoke_central_mas_real.py  smoke_real_room_path.py
tests/: test_agents.py  test_agents_memory.py  test_brief_planner.py  test_central_mas.py  test_consensus.py  test_decision_index.py  test_event_contract.py  test_http_api.py  test_pre_room_planning.py  test_provider_registry.py  test_real_run_contract.py  test_room_control.py  test_room_event_journal.py  test_room_executor.py  test_room_memory.py  test_room_orchestrator.py  test_room_runtime.py  test_round_orchestrator.py  test_router.py  test_routing_control.py  test_run_room_runtime_script.py  test_signals_phase5.py  test_smoke_real_room_path_script.py  test_tools.py
(+97 files in other folders)
